# ParallelProgramming

./: ConvToPDF.sh  ParallelProgramming.asciidoc  README.md
GayaPerformance/: InfoSystemCPU.txt  Nota.txt
GayaPerformance/src/: HPC_Explorer.cpp
MySlides/: Session2_ParallelProgramming_MPI.pptx  Session3_ParallelProgramming_HybridOpenMP_MPI.pptx  Session6_ParallelProgramming_Specx.pptx
MyTutoProg/GayaPerformance/: AnnalyseGaya2.R
MyTutoProg/HIP/: dynamic_shared.hip  hello_world.hip  matrix_multiplication.hip  occupancy.hip
MyTutoProg/MPI/: gather.c  oddEvenSortMPI_PossibleDeadlock.c  reduce.c  reduce3D.c
MyTutoProg/MPI_1/: iterFFTMPI.c  messages_nb.c  oddEvenSortMPI_Deadlock.c  scatter.c
MyTutoProg/MPI_2/: MPI_Allreduce.c  MPI_BSEND_OVERHEAD.c  MPI_Barrier.c  MPI_Bsend.c  MPI_Bsend_init.c  MPI_Buffer_attach.c  MPI_File.c  MPI_File_open.c  MPI_Graph_neighbors.c  MPI_Ibarrier.c  MPI_Ibsend.c  MPI_Ireduce.c  MPI_Ireduce_scatter.c  MPI_Iscatterv.c  MPI_Issend.c  MPI_Scatterv.c  MPI_Send.c  MPI_Send_init.c  MPI_Sendrecv.c  MPI_Win_allocate.c  MPI_Win_allocate_shared.c  MPI_Win_create_dynamic.c  (+1 more)
MyTutoProg/OpenMP/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile.win  Taskgroup.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  default,cpp  firstprivate  firstprivate.cpp  firstprivate.layout  in_reduction.cpp  lastprivate.cpp  linear.cpp  main  main.cpp  main.dev  main.sln  main.vcxproj  main.vcxproj.filters  none.cpp  reduction.cpp  schedule.cpp  shared.cpp  task.cpp  task_reduction.cpp  taskwait.cpp
(+47 files in other folders)
